--- a/css/page.less
+++ b/css/page.less
@@ -33,6 +33,18 @@ button img, .i-qw, .i-rf{
   -ms-filter: blur(5px);
   filter: blur(5px);
   */
+    #canva,
+    #canva1,
+    #canva2{
+        position :absolute;
+        width: 106%;
+        height: 106%;
+        margin-left: -3%;
+        margin-top: -3%;
+        left: 0;
+        top: 0;
+        transition: position .1s ease-out 0;
+    }
     #canva{
         /*position: absolute; 
         left:0;
