--- a/css/street.css
+++ b/css/street.css
@@ -361,6 +361,18 @@ button img,
   filter: blur(5px);
   */
 }
+#background #canva,
+#background #canva1,
+#background #canva2 {
+  position: absolute;
+  width: 106%;
+  height: 106%;
+  margin-left: -3%;
+  margin-top: -3%;
+  left: 0;
+  top: 0;
+  transition: position 0.1s ease-out 0;
+}
 #background #canva {
   /*position: absolute; 
         left:0;
