--- a/css/street.css
+++ b/css/street.css
@@ -126,12 +126,12 @@ button, .bt{
     display: inline-block;
     cursor: pointer;
     text-align: center;
-    
+
     &:hover{
-        background: @m-gray + #111;    
+        background: @m-gray + #111;
     }
     &:active{
-        background:  @m-gray - #111;    
+        background:  @m-gray - #111;
     }
 }
 */
@@ -361,9 +361,7 @@ button img,
   filter: blur(5px);
   */
 }
-#background #canva,
-#background #canva1,
-#background #canva2 {
+#background .canvas{
   position: absolute;
   width: 106%;
   height: 106%;
@@ -371,10 +369,10 @@ button img,
   margin-top: -3%;
   left: 0;
   top: 0;
-  transition: position 0.1s ease-out 0;
+  transition: left 0.1s ease-out;
 }
 #background #canva {
-  /*position: absolute; 
+  /*position: absolute;
         left:0;
         right:0;
         top:0;
@@ -416,7 +414,7 @@ button img,
         border-left: .01em solid #eaab68;
         border-bottom: .01em solid #eaab68;
         border-left-color: #eaab68 - #333;
-        border-bottom-color: #eaab68 - #333; 
+        border-bottom-color: #eaab68 - #333;
         */
   color: #b77835;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.62), 0 1px 2px rgba(253, 252, 252, 0.7);
@@ -432,7 +430,7 @@ button img,
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   /*
-        &:after{  
+        &:after{
             @h: @w - .1em;
             content: "";
             position: absolute;
