--- a/css/street.css
+++ b/css/street.css
@@ -369,7 +369,8 @@ button img,
   margin-top: -3%;
   left: 0;
   top: 0;
-  transition: left 0.1s ease-out;
+  transition: left 0.1s ease-out,
+   top 0.1s ease-out;
 }
 #background #canva {
   /*position: absolute;
