--- a/css/street.css
+++ b/css/street.css
@@ -118,23 +118,6 @@ body {
 img {
   border: none;
 }
-/*
-button, .bt{
-    .fr-convex;
-    background: @m-gray;
-    padding: .2em;
-    display: inline-block;
-    cursor: pointer;
-    text-align: center;
-
-    &:hover{
-        background: @m-gray + #111;
-    }
-    &:active{
-        background:  @m-gray - #111;
-    }
-}
-*/
 .mod_win {
   -webkit-border-radius: 3px 3px 3px 3px;
   -moz-border-radius: 3px 3px 3px 3px;
@@ -188,19 +171,6 @@ button, .bt{
   margin: 0;
   z-index: 88;
   background: rgba(0, 0, 0, 0.7);
-}
-th,
-td {
-  background: rgba(0, 0, 0, 0.5);
-  color: #ddd;
-  width: 1px;
-  height: 1px;
-  font-size: 150%;
-  padding: 2px 4px;
-  text-shadow: 1px 1px 2px black;
-}
-th {
-  font-weight: bold;
 }
 #panel {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 50%, transparent);
@@ -353,15 +323,11 @@ button img,
   bottom: 0;
   right: 0;
   z-index: -1;
-  /*
-    -webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  */
+  background: #333;
+  background: url("../img/f1.jpg") center center;
+  background-size: cover;
 }
-#background .canvas{
+#background .canvas {
   position: absolute;
   width: 106%;
   height: 106%;
@@ -369,23 +335,7 @@ button img,
   margin-top: -3%;
   left: 0;
   top: 0;
-  transition: left 0.1s ease-out,
-   top 0.1s ease-out;
-}
-#background #canva {
-  /*position: absolute;
-        left:0;
-        right:0;
-        top:0;
-        bottom:0;
-        */
-  /*
-        width: 100%;
-        height: 100%;
-        */
-  background: #333;
-  background: url("../img/f1.jpg") center center;
-  background-size: cover;
+  transition: left 0.5s ease-out, top 0.5s ease-out;
 }
 #background #c_work {
   background: #000;
@@ -415,7 +365,7 @@ button img,
         border-left: .01em solid #eaab68;
         border-bottom: .01em solid #eaab68;
         border-left-color: #eaab68 - #333;
-        border-bottom-color: #eaab68 - #333;
+        border-bottom-color: #eaab68 - #333; 
         */
   color: #b77835;
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.62), 0 1px 2px rgba(253, 252, 252, 0.7);
@@ -431,7 +381,7 @@ button img,
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   /*
-        &:after{
+        &:after{  
             @h: @w - .1em;
             content: "";
             position: absolute;
