--- a/css/style.less
+++ b/css/style.less
@@ -2,6 +2,7 @@
 @import "usefull.less";
 @import "frame.less";
 
+@import "select.less";
 @import "sceleton.less";
 @import "panel.less";
 @import "page.less";
