feat[css]: select

--- a/css/panel.less
+++ b/css/panel.less
@@ -67,5 +67,18 @@
             margin: .6em 0;
             text-align: center;
         }
+     .customSelect{
+       display: block;
+       .list{
+         position: fixed;
+         top: 1em;
+         left: 1em;
+         right: 1em;
+         background: white;
+         li{
+           font-size: 120%;
+         }
+       }
+     }
     }
 }
