--- a/css/panel.less
+++ b/css/panel.less
@@ -1,9 +1,10 @@
 #panel{
-    @w: 1em;
+    @w: 2.2em;
     @h: @w;
     background: linear-gradient(to bottom, rgba(0,0,0,.3) 50%, transparent);
     padding-bottom: .2em;
-    .bt{         
+    .bt{       
+		text-align: center;      
         min-width: @w;
         min-height: @h;        
        
