fix[modal windows]

--- a/css/page.less
+++ b/css/page.less
@@ -55,12 +55,12 @@ button img, .i-qw, .i-rf{
 }
 
 #confWin{
-    .frame(1px);
-    display: table;
-    font-size: 140%;
-    margin: 1em auto;
-    background: white;
-    padding: 1em;
+    /* .frame(1px); */
+    /* display: table; */
+    /* font-size: 140%; */
+    /* margin: 1em auto; */
+    /* background: white; */
+    /* padding: 1em; */
     label{
         cursor: pointer;
     }
@@ -69,36 +69,7 @@ button img, .i-qw, .i-rf{
     text-align: center;
 }
 
-div#info{
-	.frame();
-	max-width: 40rem;
-	padding: 1rem;
-	margin: 1em auto;	
-	background: #ffffffee;
-	position: relative;
-	
-	p{
-		font-size: 120%
-	}
-	
-	.cross{
-		position: absolute;
-		top: 1rem;
-		right: 1rem;
-		cursor: pointer;
-		color: @l-gray;
-		transition: color .2s;
-		
-		&:hover{
-			color: @d-gray;
-		}
-		
-		&:before{
-			content: "✖";
-			font-size: 200%;
-		}
-	}
-}
+
 
 #milepost{
     font-size: 40px;
