--- a/css/sceleton.less
+++ b/css/sceleton.less
@@ -58,8 +58,20 @@ button{
     cursor: default;
     font-weight: normal;
 }
-#dbg{
-    position: fixed;
+.dbg{
+    /* position: fixed; */
+    /* top: 0; */
+    /* left: 0; */
+    /* bottom: 0; */
+    /* right: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* margin: 0; */
+    /* z-index: 88; */
+    background: rgba(0,0,0,.7);
+}
+.center_wrapper{
+	position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
@@ -68,5 +80,39 @@ button{
     height: 100%;
     margin: 0;
     z-index: 88;
-    background: rgba(0,0,0,.7);
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	
+	.content{
+		.frame();
+		max-width: 40rem;
+		padding: 1rem;
+		margin: 1em auto;	
+		background: #ffffffee;
+		position: relative;
+		
+		p{
+			font-size: 120%
+		}
+		
+		.cross{
+			position: absolute;
+			top: 1rem;
+			right: 1rem;
+			cursor: pointer;
+			color: @l-gray;
+			transition: color .2s;
+			
+			&:hover{
+				color: @d-gray;
+			}
+			
+			&:before{
+				content: "✖";
+				font-size: 200%;
+			}
+		}
+	}
 }
