--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,19 @@ button:hover {
   cursor: default;
   font-weight: normal;
 }
-#dbg {
+.dbg {
+  /* position: fixed; */
+  /* top: 0; */
+  /* left: 0; */
+  /* bottom: 0; */
+  /* right: 0; */
+  /* width: 100%; */
+  /* height: 100%; */
+  /* margin: 0; */
+  /* z-index: 88; */
+  background: rgba(0, 0, 0, 0.7);
+}
+.center_wrapper {
   position: fixed;
   top: 0;
   left: 0;
@@ -252,7 +264,42 @@ button:hover {
   height: 100%;
   margin: 0;
   z-index: 88;
-  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.center_wrapper .content {
+  -webkit-border-radius: 3px 3px 3px 3px;
+  -moz-border-radius: 3px 3px 3px 3px;
+  border-radius: 3px 3px 3px 3px;
+  overflow: visible;
+  background: #fff;
+  border: 0px solid #d8d8d8;
+  border-bottom-width: 2px;
+  border-top-width: 0px;
+  max-width: 40rem;
+  padding: 1rem;
+  margin: 1em auto;
+  background: #ffffffee;
+  position: relative;
+}
+.center_wrapper .content p {
+  font-size: 120%;
+}
+.center_wrapper .content .cross {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer;
+  color: #ddd;
+  transition: color .2s;
+}
+.center_wrapper .content .cross:hover {
+  color: #222;
+}
+.center_wrapper .content .cross:before {
+  content: "✖";
+  font-size: 200%;
 }
 #panel {
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 50%, transparent);
@@ -444,58 +491,18 @@ button img,
   filter: blur(5px);
 }
 #confWin {
-  -webkit-border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  border-radius: 3px 3px 3px 3px;
-  overflow: visible;
-  background: #fff;
-  border: 1px solid #d8d8d8;
-  border-bottom-width: 2px;
-  border-top-width: 0px;
-  display: table;
-  font-size: 140%;
-  margin: 1em auto;
-  background: white;
-  padding: 1em;
+  /* .frame(1px); */
+  /* display: table; */
+  /* font-size: 140%; */
+  /* margin: 1em auto; */
+  /* background: white; */
+  /* padding: 1em; */
 }
 #confWin label {
   cursor: pointer;
 }
 .center {
   text-align: center;
-}
-div#info {
-  -webkit-border-radius: 3px 3px 3px 3px;
-  -moz-border-radius: 3px 3px 3px 3px;
-  border-radius: 3px 3px 3px 3px;
-  overflow: visible;
-  background: #fff;
-  border: 0px solid #d8d8d8;
-  border-bottom-width: 2px;
-  border-top-width: 0px;
-  max-width: 40rem;
-  padding: 1rem;
-  margin: 1em auto;
-  background: #ffffffee;
-  position: relative;
-}
-div#info p {
-  font-size: 120%;
-}
-div#info .cross {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  cursor: pointer;
-  color: #ddd;
-  transition: color .2s;
-}
-div#info .cross:hover {
-  color: #222;
-}
-div#info .cross:before {
-  content: "✖";
-  font-size: 200%;
 }
 #milepost {
   font-size: 40px;
